# ModernCSharp

./: README.md
codes/FlatPhysics/01/: CMakeLists.txt
codes/FlatPhysics/01/Flat/: CMakeLists.txt
codes/FlatPhysics/01/FlatGame/: CMakeLists.txt
codes/FlatPhysics/01/FlatPhysics/: CMakeLists.txt  FlatVector.cs
codes/SnakeGame/01/Snake/: Direction.cs  GameState.cs  MainWindow.xaml  MainWindow.xaml.cs  Snake.csproj
codes/SnakeGame/02/Snake/: MainWindow.xaml  MainWindow.xaml.cs  Position.cs  Snake.sln
codes/SnakeGame/03/Snake/: MainWindow.xaml.cs
codes/SnakeGame/cmake/01/Snake/: CMakeLists.txt
codes/SnakeGame/cmake/01a/Snake/: CMakeLists.txt  GameState.cs  GridValue.cs  Images.cs
codes/SnakeGame/cmake/01b/Snake/: CMakeLists.txt  Direction.cs  Position.cs
codes/SnakeGame/cmake/01c/Snake/: CMakeLists.txt  MainWindow.xaml.cs
codes/SnakeGame/cmake/02/Snake/: CMakeLists.txt  Direction.cs  MainWindow.xaml  Position.cs
codes/XNA/01/SpriteSample01/: SpriteSample.sln  UpgradeLog.htm
codes/XNA/01/SpriteSample01/SpriteSample/: Game1.cs  Program.cs  SpriteSample.csproj
codes/XNA/01/SpriteSample01/SpriteSampleContent/: SpriteSampleContent.contentproj
codes/XNA/simple/01/MyXnA/: MyXnA.csproj  MyXnA.sln  Program.cs
codes/dll/createandusedll/01/: CMakeLists.txt
codes/dll/createdll/01/: CMakeLists.txt  MyDll.cs
codes/dll/usedll/01/: CMakeLists.txt
codes/dll/usedll/01a/: CMakeLists.txt
codes/dll/usedll/01b/: CMakeLists.txt  main.cs
codes/dll/usedll/01c/: CMakeLists.txt
codes/simple/EqualityComparer/01/: main.cs
codes/simple/EqualityComparer/02/: CMakeLists.txt
codes/simple/EqualityComparer/02a/: CMakeLists.txt  main.cs
codes/simple/EqualityComparer/02c/: CMakeLists.txt  main.cs
codes/simple/EqualityComparer/03/: CMakeLists.txt  main.cs
codes/simple/cmake/01/: CMakeLists.txt
codes/simple/cmake/02/: CMakeLists.txt  FileA.cs  FileB.cs
codes/simple/vs2022ide/01/testprj/: Program.cs  testprj.csproj  testprj.sln
codes/winforms/MarioStyle/01/MarioStyle/: CMakeLists.txt  Form1.Designer.cs  Form1.cs
codes/winforms/MarioStyle/01a/MarioStyle/: Form1.Designer.cs  Program.cs
codes/winforms/MarioStyle/01b/MarioStyle/: Form1.Designer.cs
codes/winforms/MarioStyle/01c/MarioStyle/: Form1.Designer.cs  Form1.cs
codes/winforms/MarioStyle/01d/MarioStyle/: BAKForm1.Designer.cs  CMakeLists.txt  Form1.Designer.cs  Form1.cs
codes/winforms/MarioStyle/01e/MarioStyle/: Form1.cs
codes/winforms/PacMan/01/PacMan/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Form1.resx
codes/winforms/PacMan/01a/PacMan/: Form1.Designer.cs
codes/winforms/PacMan/01b/PacMan/: Form1.Designer.cs  Form1.cs
codes/winforms/PacMan/01c/: CMakeLists.txt
codes/winforms/PacMan/01c/PacMan/: CMakeLists.txt
codes/winforms/PacMan/01d/PacMan/: Form1.Designer.cs
codes/winforms/TRexRunner/01/TRexRunner/: CMakeLists.txt  Form1.Designer.cs  Program.cs
codes/winforms/TRexRunner/01a/TRexRunner/: Form1.cs
codes/winforms/TRexRunner/01b/TRexRunner/: Form1.Designer.cs
codes/winforms/TRexRunner/01c/TRexRunner/: Form1.cs
codes/winforms/TRexRunner/01d/TRexRunner/: CMakeLists.txt  Form1.Designer.cs  Form1.cs
codes/winforms/TRexRunner/01d/TRexRunner/Properties/: Resources.resx
codes/winforms/TicTacToe/01/TicTacToe/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Program.cs
codes/winforms/TicTacToe/01TEST/TicTacToe/: CMakeLists.txt
codes/winforms/TicTacToe/01vs/TicTacToe/: Form1.Designer.cs  Form1.cs  Form1.resx  TicTacToe.sln
codes/winforms/TicTacToe/02vs/TicTacToe/: Form1.Designer.cs  Form1.cs
codes/winforms/TicTacToe/test/MyWinFormsApp/: Form1.cs  MyWinFormsApp.sln
codes/winforms/cmake_prj/01a/TicTacToe/: Program.cs
codes/winforms/cmake_prj/01b/: CMakeLists.txt
codes/winforms/cmake_prj/01b/TicTacToe/: CMakeLists.txt
codes/winforms/cmake_prj/01c/TicTacToe/: CMakeLists.txt  Program.cs
codes/winforms/cmake_prj/01d/TicTacToe/: CMakeLists.txt
codes/winforms/cmake_prj/01e/TicTacToe/: Form1.Designer.cs  Form1.cs  Program.cs
codes/winforms/cmake_prj/02/TicTacToe/: CMakeLists.txt
codes/winforms/ref/MyWinFormsApp/: Form1.Designer.cs  MyWinFormsApp.sln  Program.cs
codes/winforms/simpleformbyIde/01/WinFormsApp1/: WinFormsApp1.sln
codes/winforms/simpleformbyIde/02/WinFormsApp1/: Form1.Designer.cs  WinFormsApp1.sln
codes/winforms/simpleformbyIde/02a/WinFormsApp1/: WinFormsApp1.sln
codes/winforms/simpleformbycmake/01/WinFormsApp1/: CMakeLists.txt
codes/winforms/simpleformbycmake/01a/WinFormsApp1/: CMakeLists.txt  Form1.cs
codes/winforms/simpleformbycmake/01b/WinFormsApp1/: CMakeLists.txt  Form1.Designer.cs  Program.cs
codes/wpf/PacMan/cmakeprj/01b/PacMan/: CMakeLists.txt  MainWindow.xaml.cs
codes/wpf/TicTacToe/01/TicTacToe/: CMakeLists.txt  MainWindow.xaml
codes/wpf/TicTacToe/01a/TicTacToe/: CMakeLists.txt  GameResult.cs  MainWindow.xaml.cs  WinInfo.cs
codes/wpf/TicTacToe/01b/TicTacToe/: CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  Player.cs  WinType.cs
codes/wpf/TicTacToe/01c/TicTacToe/: MainWindow.xaml  MainWindow.xaml.cs
codes/wpf/TicTacToe/01d/TicTacToe/: MainWindow.xaml.cs
codes/wpf/TicTacToe/01e/TicTacToe/: App.xaml  GameState.cs  MainWindow.xaml  MainWindow.xaml.cs
codes/wpf/canvas/01/MyCanvas/: CMakeLists.txt  MainWindow.xaml.cs
codes/wpf/canvas/02/MyCanvas/: MainWindow.xaml  MainWindow.xaml.cs
codes/wpf/canvas/02a/MyCanvas/: CMakeLists.txt  MainWindow.xaml.cs
codes/wpf/canvas/02b/MyCanvas/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs
codes/wpf/canvas/02c/: CMakeLists.txt
codes/wpf/canvas/02c/MyCanvas/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
codes/wpf/canvas/02d/MyCanvas/: MainWindow.xaml  MainWindow.xaml.cs
codes/wpf/simple/01/WpfApp/: WpfApp.sln
codes/wpf/simple/02/WpfApp/: App.xaml  MainWindow.xaml  (+1 more)
codes/wpf/simple/cmakeprj/02/WpfApp/: CMakeLists.txt
codes/wpf/tetris/01a/Tetris/: CMakeLists.txt  MainWindow.xaml.cs
codes/wpf/tetris/01e/Tetris/: CMakeLists.txt  IBlock.cs  JBlock.cs  LBlock.cs  SBlock.cs  TBlock.cs  ZBlock.cs
codes/wpf/tetris/02b/: CMakeLists.txt
codes/wpf/tetris/03c/: CMakeLists.txt
(+149 files in other folders)
